As a user, I want to delete tasks [Delivers #185422971]
