# swagger.yaml
@@ -211,3 +211,38 @@ paths:
               schema:
                 type: string
               example: Unauthorized
+
+  /api/tasks/{taskId}:
+    delete:
+      summary: Delete a task
+      security:
+        - cookieAuth: []
+      parameters:
+        - in: path
+          name: taskId
+          required: true
+          schema:
+            type: string
+          example: '1'
+      responses:
+        '204':
+          description: No Content
+          content:
+            text/html:
+              schema:
+                type: string
+              example: Task deleted successfully
+        '401':
+          description: Unauthorized
+          content:
+            text/html:
+              schema:
+                type: string
+              example: Unauthorized
+        '404':
+          description: Not Found
+          content:
+            text/html:
+              schema:
+                type: string
+              example: Task not found
